media queries for iphone/ipad partially fixed. still gonna fix footer on iphone landscape

--- a/css/mediaq.less
+++ b/css/mediaq.less
@@ -199,7 +199,6 @@
 				font-size: .9em;
 				border: none;
 
-
 				.icon {
 					margin: 0 auto !important;
 				}
@@ -212,12 +211,19 @@
 		}/*#nav*/
 	}/*nav*/
 		
+	/***** PORTFOLIO *****/
+	#portfolio-front {	
+		ul {
+			width: 90%;
+		}
+	}/*#portfolio-front*/
+	
+		
 	/***** CONTACT ******/
 	#contact-container {
 		width: 90%;
 	}
 
-	
 }
 
 
