--- a/css/styles.less
+++ b/css/styles.less
@@ -140,6 +140,7 @@ h1 {
 		margin: 0 auto;
 		padding: 0;
 		text-align: center;
+		width: 75%;
 
 		img {
 			margin: 10px;
@@ -369,23 +370,17 @@ footer {
 /***** SOCIAL MEDIA *****/
 
 .social {
-        width:90%;
-        margin:0 auto; 
-        padding-bottom:10px;
-                  a{
-                    display:inline-block;
-                    padding:10px;
+	width: 70%;
+	margin:0 auto; 
+	padding-bottom:10px;
+	
+	a{
+		display:inline-block;
+		padding:10px;
                     
-                                 img{
-                                 height:40px;
-                                 -webkit-transition: .7s all ease;
-					-moz-transition: .7s all ease;
-					transition: .7s all ease;
-
-                                 &:hover{
-                                         height:43px;
-                                         }
-                                 }
-                    }
-        }
+		img {
+			height:30px;
+		}/*img*/
+	}/*a*/
+}/*social*/
 
